[package]
name = "shodan-client"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shodan client"
repository = "https://github.com/vswarte/shodan-rs"

[dependencies]
url = "2.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
