[package]
name = "shodan-client"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shodan client"
repository = "https://github.com/vswarte/shodan-rs"

[dependencies]
url = "2.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
